# num-utils

./: .clang-format  .gitignore  .vim  CMakeLists.txt  README.md
include/nu/: aitken-naville.h  diff.h  nu.h  pch.h  polynomials.h  rk.h
src/: aitken-naville.cpp  nu.cpp  rk.cpp
test/: CMakeLists.txt  aitken-naville.cpp  diff.cpp  pch.h  polynomials.cpp  rk.cpp  test.cpp
